replace video transparent class to Kampos

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,7 +1,5 @@
 @use "./fonts.scss";
 @use "./nav.scss";
-@use "./air.scss";
-@use "./video.scss";
 @use "./photoset.scss";
 @use "./bubble.scss";
 @use "./figure.scss";
@@ -9,8 +7,14 @@
 body {
     font-family: 'Montserrat Alternates', sans-serif;
 
-    &.about,
-    &.massage {}
+    &.about-page,
+    &.massage-page {}
+
+    &.about-page {
+        & .main {
+            background: repeating-linear-gradient(to left, #e9c8b7, #e9c8b7 7%, #ef8e7b 7%, #ef8e7b 10%);
+        }
+    }
 }
 
 .massage-page {}
@@ -20,7 +24,6 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
     perspective: 2px;
-    background: repeating-linear-gradient(to left, #e9c8b7, #e9c8b7 7%, #ef8e7b 7%, #ef8e7b 10%);
     transform-style: preserve-3d;
 
     &-body {
@@ -31,6 +34,15 @@ body {
 .screen {
     margin: 0 auto;
     // min-height: 600px;
+}
+
+.intro {
+    position: relative;
+    text-align: center;
+    padding: 20px;
+    max-width: 203px;
+    margin: 0 auto;
+    align-self: center;
 }
 
 .page__overlay {
