--- a/src/components/Hello/style.scss
+++ b/src/components/Hello/style.scss
@@ -11,17 +11,19 @@
     &__zaura {
         position: absolute;
         left: 50%;
-        bottom: 0;
+        bottom: -25px;
+        transform-style: preserve-3d;
         transform: translate(-50%, 100%);
         transition: transform .5s ease .5s;
 
         &__img {
             max-width: 333px;
+            transform: translateZ(-0.1px);
         }
     }
 
     &__prayerhands {
-        max-width: 150px;
+        max-width: 110px;
         position: absolute;
         left: 50%;
         bottom: calc(var(--zaura-height) + 20px);
@@ -29,6 +31,15 @@
         object-fit: contain;
     }
 
+    &__plant {
+        max-width: 250px;
+        position: absolute;
+        left: 30%;
+        bottom: -10%;
+        transform: translateZ(-0.3px) translateX(330px);
+        object-fit: contain;
+    }
+    
     &__declaration {
         max-width: 150px;
         position: absolute;
@@ -39,20 +50,26 @@
     }
 
     &__lump {
-        max-width: 150px;
         position: absolute;
-        left: 50%;
-        top: 0;
-        bottom: calc(var(--zaura-height) + 20px);
-        transform: translateZ(-0.8px) translateX(-360px) scale(1.6);
+        left: 40%;
+        top: 20%;
+        transform: translateZ(0.3px) translateX(-160px) scale(1);
         object-fit: contain;
 
         &:first-child {
-            z-index: 1;
+            opacity: 1;
         }
 
-        &:first-child:hover {
+        &:nth-child(2) {
             opacity: 0;
+        }
+
+        &:hover:first-child {
+            opacity: 0;
+        }
+
+        &:hover:nth-child(2) {
+            opacity: 1;
         }
     }
     
