--- a/src/components/AlphaVideo/style.scss
+++ b/src/components/AlphaVideo/style.scss
@@ -10,23 +10,25 @@
 
     }
 
-    &::after {
-        content: '';
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 32px;
-        height: 32px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        background-image: url("../../assets/img/icons/sound_off.svg");      
-    }
-    
-    &.is-disabled {
+    &.sound {
         &::after {
-            background-image: url("../../assets/img/icons/sound_on.svg");
+            content: '';
+            display: block;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 32px;
+            height: 32px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-image: url("../../assets/img/icons/sound_off.svg");      
+        }
+        
+        &.is-disabled {
+            &::after {
+                background-image: url("../../assets/img/icons/sound_on.svg");
+            }
         }
     }
 }
