--- a/src/components/StoryTwo/style.scss
+++ b/src/components/StoryTwo/style.scss
@@ -1,3 +1,5 @@
+@import "../../assets/styles/vars";
+
 .StoryTwo {
     --zaura-height: 443px;
 
@@ -5,35 +7,101 @@
     font-size: 0;
     position: relative;
     transform-style: preserve-3d;
-    max-width: 1000px;
     min-height: 700px;
     margin: 0 auto;
+
+
+    &::before {
+        content: '';
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: repeating-linear-gradient(to top, #e9c8b7, #e9c8b7 80px, #ef8e7b 80px, #ef8e7b 140px);
+        // background: #e9c8b7;
+        z-index: -1;
+        // background: repeating-linear-gradient(to left, white, white 80px, #ef8e7b 80px, #ef8e7b 140px);
+
+        @media screen and (min-width: $mobile-width) {
+            animation-name: bgTopDown;
+            animation-timing-function: cubic-bezier(0.315, 0.025, 0.755, 1.000);
+            animation-duration: 9s;
+            animation-direction: alternate;
+            animation-iteration-count: infinite;
+        }
+
+    }
 
     &__zaura {
         position: absolute;
         left: 50%;
         bottom: 0;
-        transform: translate(-50%, 100%);
-        transition: transform .5s ease .5s;
+        transform: translate(-50%, 0);
+        // transform: translate(-50%, 100%);
+        // transition: transform .5s ease .5s;
 
         &__img {
             max-width: 333px;
         }
+
+        &__nimb {
+            position: relative;
+            width: 300px;
+            height: 300px;
+            left: 50%;
+            top: 240px;
+            transform: translateX(-50%);
+            border-radius: 50%;
+            z-index: -1;
+            background: rgb(255, 215, 0);
+
+            &--gold {
+            }
+            
+            // animation: nimb 16s ease-in-out 1s infinite alternate;
+            // background: radial-gradient(circle, rgb(255, 215, 0) 45%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0) 100%);
+            @media screen and (max-width: $mobile-width) {}
+        }
     }
 
     &__oil {
-        width: 90px;
+        width: 50px;
         position: absolute;
-        left: 14%;
+        left: 34%;
         bottom: 10%;
-        transform: translateZ(-0.5px);
+        transform: translateZ(0.5px);
     }
 
 
     &.is-open {
-        
+
         & .StoryTwo__zaura {
             transform: translate(-50%, 0);
         }
+    }
+}
+
+@keyframes bgTopDown {
+    0% {
+        background-position: 0 0;
+    }
+
+    100% {
+        background-position: 0 500px;
+    }
+}
+
+
+@keyframes nimb {
+    0% {
+        opacity: 0;
+        // background: radial-gradient(circle, rgb(255, 215, 0) 45%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0) 100%);
+    }
+
+    100% {
+        opacity: 1;
+        // background: radial-gradient(circle, rgb(255, 255, 255) 45%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0) 100%);
     }
 }
