--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 code {
