--- a/src/components/SVGHands/style.scss
+++ b/src/components/SVGHands/style.scss
@@ -10,7 +10,7 @@
     background-color: #fff;
     
     &__img {
-        max-width: 333px;
+        width: 333px;
         position: relative;
     }
 }
