--- a/src/assets/styles/massage.scss
+++ b/src/assets/styles/massage.scss
@@ -1,5 +1,3 @@
-$min-width-card: 600px;
-
 .massage {
     font-size: 14px;
     padding: 24px 0;
@@ -31,6 +29,10 @@ $min-width-card: 600px;
 
         &--z_from_top {
             clip-path: ellipse(46.59% 51.75% at 54.49% 47.61%);
+            
+            @media screen and (max-width: $min-width-card) {
+                margin-top: 48px;
+            }
         }
     }
 
