--- a/src/assets/styles/card.scss
+++ b/src/assets/styles/card.scss
@@ -55,6 +55,8 @@
         }
 
         .to {
+            display: flex;
+            gap: 10px;
             font-weight: 200;
             font-size: 1.1em;
         }
