--- a/src/assets/styles/contacts.scss
+++ b/src/assets/styles/contacts.scss
@@ -1,12 +1,16 @@
 .contacts {
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 16px;
+    justify-content: center;
+    align-items: center;
     
     &__container {
         width: 100%;
         height: 100%;
         padding: 48px;
+        box-sizing: border-box;
 
         @media screen and (max-width: $mobile-width) {
             padding: 48px 24px;
