--- a/src/components/StoryThree/style.scss
+++ b/src/components/StoryThree/style.scss
@@ -60,8 +60,12 @@
                 max-width: 150px;
                 z-index: -1;
                 opacity: 0.6;
+                animation-name: signal;
+                animation-duration: 2s;
+                animation-iteration-count: infinite;
+                animation-direction: alternate;
             }
-
+            
             &--left {
                 left: -100px;
             }
@@ -72,4 +76,14 @@
     }
 
 
+}
+
+@keyframes signal {
+    0% {
+        opacity: .6;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
