--- a/src/components/Hello/style.scss
+++ b/src/components/Hello/style.scss
@@ -17,7 +17,10 @@
         margin: 0px 0px 0 auto;
         padding: 5vw 8vw 0 0;
         color: white;
-        text-shadow: 4px 10px 7px var(--color-black);
+
+        @media screen and (max-width: $mobile-width) {
+            padding-top: 140px;
+        }
     }
 
     &__zaura {
