--- a/src/components/Hello/style.scss
+++ b/src/components/Hello/style.scss
@@ -11,15 +11,28 @@
     margin: 0 auto;
 
     &__speach {
-        font-size: 6vh;
+        font-size: 48px;
         max-width: 340px;
+        font-weight: normal;
         text-align: center;
-        margin: 0px 0px 0 auto;
-        padding: 5vw 8vw 0 0;
+        margin: 0 0 0 auto;
+        padding: 8vw 8vw 0 0;
         color: white;
 
+        @media screen and (max-width: $tablet-width) {
+            font-size: 40px;
+            padding-top: 20%;
+        }
+
         @media screen and (max-width: $mobile-width) {
-            padding-top: 140px;
+            margin: 0 auto;
+            font-size: 38px;
+            padding: 32% 0 0;
+        }
+
+        @media screen and (max-width: $min-width) {
+            font-size: 32px;
+            padding-top: 60%;
         }
     }
 
@@ -34,7 +47,7 @@
         &__img {
             max-width: 333px;
             transform: translateZ(-0.1px);
-            
+
             @media screen and (max-width: $mobile-width) {
                 max-width: 250px;
             }
@@ -46,7 +59,7 @@
             & .hello__phone__gif--cover {
                 opacity: 0;
             }
-            
+
             & .hello__phone__gif--anim {
                 opacity: 1;
             }
@@ -60,7 +73,7 @@
         bottom: 30%;
         transform: translateZ(-0.3px);
         object-fit: contain;
-        
+
         @media screen and (max-width: $mobile-width) {
             left: 80%;
             max-width: 200px;
@@ -80,7 +93,7 @@
         @media screen and (max-width: $mobile-width) {
             left: 20%;
         }
-        
+
         &__img {
             width: 100%;
             height: 100%;
@@ -96,7 +109,7 @@
             left: 1px;
             position: absolute;
             font-size: 13px;
-            
+
             &--cover {
                 background-color: #fff;
                 z-index: 1;
@@ -105,7 +118,7 @@
                 opacity: 1;
                 object-fit: contain;
             }
-            
+
             &--anim {
                 object-fit: cover;
                 z-index: -1;
