--- a/src/components/Hello/style.scss
+++ b/src/components/Hello/style.scss
@@ -34,6 +34,12 @@
             font-size: 32px;
             padding-top: 60%;
         }
+
+
+        @media screen and (max-height: 800px) {
+            font-size: 40px;
+            padding-top: 20%;
+        }
     }
 
     &__zaura {
